<resources>
    <string name="app_name">SoptSeminar</string>
    <string name="sopt">SOPT</string>
    <string name="sopt_ko">솝트</string>

    <!-- Global -->
    <string name="upload">등록</string>

    <!-- Navigation -->
    <string name="tab_profile">PROFILE</string>
    <string name="tab_github">GITHUB</string>
    <string name="tab_camera">CAMERA</string>

    <!-- Onboarding -->
    <string name="onboarding_start">시작하기</string>
    <string name="onboarding_first_description">열정을 적극적으로 실천하고 싶다면!</string>
    <string name="onboarding_second_description">다른 사람들과 연결되어 소통하고 싶다면!</string>
    <string name="onboarding_third_description">용기와 도전으로 발전해나가고 싶다면!\nTHE SOPT의 주인공이 되어주세요😎</string>

    <!-- Sign -->
    <string name="sign_in">로그인</string>
    <string name="sign_up">회원가입</string>

    <string name="name">이름</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>

    <string name="name_hint">이름을 입력해 주세요.</string>
    <string name="id_hint">아이디를 입력해 주세요.</string>
    <string name="password_hint">비밀번호를 입력해 주세요.</string>

    <string name="sign_up_guide">솝트가 처음이신가요? <u><b><font color="#171717">회원가입</font></b></u></string>

    <string name="check_sign_in_input_toast_text">아이디 또는 비밀번호를 확인해 주세요</string>
    <string name="sign_in_success_toast_text">안녕하세요 %s님👋</string>
    <string name="sign_up_exist_user_toast_text">이미 가입된 계정이에요! 로그인으로 진행해 주세요</string>
    <string name="sign_up_success_toast_text">솝트에 가입되었어요!</string>

    <!-- Home -->
    <string name="info">정보</string>
    <string name="age">Age</string>
    <string name="mbti">MBTI</string>
    <string name="part">Part</string>

    <string name="education">학력</string>
    <string name="major">성신여대&#160;&#160;&#160;&#160;<b>컴퓨터공학과</b></string>

    <string name="web_site">웹사이트</string>
    <string name="github"><a href="https://github.com/youngjinc"><font color="#474747"><b><u>GitHub</u></b></font></a></string>
    <string name="blog"><a href="https://velog.io/@zini"><font color="#474747"><b><u>Blog</u></b></font></a></string>


    <!-- Part -->
    <string name="part_aos">Android</string>
    <string name="part_ios">IOS</string>
    <string name="part_web">Web</string>
    <string name="part_server">Server</string>
    <string name="part_design">Design</string>
    <string name="part_plan">Plan</string>

    <!-- Part -->
    <string name="github_detail_follower">Followers</string>
    <string name="github_detail_following">Following</string>
    <string name="github_detail_repository">Repositories</string>

    <!-- Gallery -->
    <string name="gallery_image_upload_title">이미지 업로드</string>

    <!-- Settings -->
    <string name="settings_title">환경설정</string>
    <string name="settings_logout">로그아웃</string>
    <string name="settings_logout_success_toast_text">로그아웃 완료되었어요!</string>

</resources>