<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.home.HomeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingBottom="120dp">

            <TextView
                android:id="@+id/title"
                style="@style/Widget.TabTitle.TextAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/spacingBase"
                android:layout_marginStart="@dimen/spacingBase"
                android:text="@string/sopt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/spacing20" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/spacing20" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/profile_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacingBase"
                android:background="@drawable/shape_border_radius_32"
                android:backgroundTint="@color/black"
                android:paddingVertical="@dimen/spacing20"
                app:layout_constraintEnd_toEndOf="@id/guide_end"
                app:layout_constraintStart_toStartOf="@id/guide_start"
                app:layout_constraintTop_toBottomOf="@id/title">

                <ImageView
                    android:id="@+id/profile_img"
                    android:layout_width="80dp"
                    android:layout_height="0dp"
                    android:background="@drawable/shape_border_radius_40"
                    android:src="@drawable/profile_img"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacingBase"
                    android:fontFamily="@font/suit_b"
                    android:text="최영진"
                    android:textColor="@color/white"
                    android:textSize="@dimen/typographyTitle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/profile_img" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacingMicro"
                    android:fontFamily="@font/montserrat_r"
                    android:text="cyjin6789@gmail.com"
                    android:textColor="@color/gray_300"
                    android:textSize="@dimen/typographyDetail"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/name" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/info_section"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacingLarge"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="@id/guide_end"
                app:layout_constraintStart_toStartOf="@id/guide_start"
                app:layout_constraintTop_toBottomOf="@id/profile_container">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info"
                    android:textAppearance="@style/Widget.Title.TextAppearance" />

                <View
                    style="@style/Widget.Divider.Style"
                    android:layout_width="match_parent" />

                <TextView
                    style="@style/Widget.Description.Style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/age" />

                <TextView
                    style="@style/Widget.Description.Style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mbti" />

                <TextView
                    style="@style/Widget.Description.Style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/part" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/education_section"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="@id/guide_end"
                app:layout_constraintStart_toStartOf="@id/guide_start"
                app:layout_constraintTop_toBottomOf="@id/info_section">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/education"
                    android:textAppearance="@style/Widget.Title.TextAppearance" />

                <View
                    style="@style/Widget.Divider.Style"
                    android:layout_width="match_parent" />

                <TextView
                    style="@style/Widget.Description.Style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/major" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/web_site_section"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="@id/guide_end"
                app:layout_constraintStart_toStartOf="@id/guide_start"
                app:layout_constraintTop_toBottomOf="@id/education_section">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/web_site"
                    android:textAppearance="@style/Widget.Title.TextAppearance" />

                <View
                    style="@style/Widget.Divider.Style"
                    android:layout_width="match_parent" />

                <TextView
                    android:id="@+id/github"
                    style="@style/Widget.Description.Style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/github" />

                <TextView
                    android:id="@+id/blog"
                    style="@style/Widget.Description.Style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blog" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>