<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.sign.screens.SignUpActivity">

    <data>

        <variable
            name="viewModel"
            type="org.sopt.soptseminar.presentation.sign.viewmodels.SignViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/spacing20" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/spacing20" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/back"
                style="@style/Widget.Navigation.Button.Style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/Widget.ToolbarTitle.TextAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacingSmall"
            android:text="@string/name"
            android:textAppearance="@style/Widget.EditText.Label.TextAppearance"
            app:layout_constraintStart_toStartOf="@id/guide_start"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <EditText
            android:id="@+id/name_input"
            style="@style/Widget.EditText.Style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacingSmall"
            android:hint="@string/name_hint"
            android:maxLines="1"
            android:onTextChanged="@{viewModel::onUserNameTextChanged}"
            app:layout_constraintEnd_toEndOf="@id/guide_end"
            app:layout_constraintStart_toStartOf="@id/guide_start"
            app:layout_constraintTop_toBottomOf="@id/name_title" />


        <TextView
            android:id="@+id/id_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing20"
            android:text="@string/id"
            android:textAppearance="@style/Widget.EditText.Label.TextAppearance"
            app:layout_constraintStart_toStartOf="@id/guide_start"
            app:layout_constraintTop_toBottomOf="@id/name_input" />

        <EditText
            android:id="@+id/id_input"
            style="@style/Widget.EditText.Style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacingSmall"
            android:hint="@string/id_hint"
            android:maxLines="1"
            android:onTextChanged="@{viewModel::onUserIdTextChanged}"
            app:layout_constraintEnd_toEndOf="@id/guide_end"
            app:layout_constraintStart_toStartOf="@id/guide_start"
            app:layout_constraintTop_toBottomOf="@id/id_title" />

        <TextView
            android:id="@+id/password_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing20"
            android:text="@string/password"
            android:textAppearance="@style/Widget.EditText.Label.TextAppearance"
            app:layout_constraintStart_toStartOf="@id/guide_start"
            app:layout_constraintTop_toBottomOf="@id/id_input" />

        <EditText
            android:id="@+id/password_input"
            style="@style/Widget.EditText.Style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacingSmall"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:onTextChanged="@{viewModel::onUserPasswordTextChanged}"
            app:layout_constraintEnd_toEndOf="@id/guide_end"
            app:layout_constraintStart_toStartOf="@id/guide_start"
            app:layout_constraintTop_toBottomOf="@id/password_title" />

        <Button
            android:id="@+id/sign_up"
            style="@style/Widget.Button.Style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacingBase"
            android:onClick="@{() -> viewModel.signUp()}"
            android:text="@string/sign_up"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guide_end"
            app:layout_constraintStart_toStartOf="@id/guide_start" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
