<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.github.screens.GithubFragment">

    <data>

        <variable
            name="viewModel"
            type="org.sopt.soptseminar.presentation.github.viewmodels.GithubViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/spacingBase"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/Widget.ToolbarTitle.TextAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.userInfo.name}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="최영진" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab"
            android:layout_width="match_parent"
            android:layout_height="@dimen/HeightTabItem"
            android:layout_marginHorizontal="@dimen/spacingBase"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:tabBackground="@drawable/selector_tab_item_background"
            app:tabGravity="center"
            app:tabIndicator="@null"
            app:tabMaxWidth="@dimen/WidthTabItem"
            app:tabSelectedTextColor="@color/white"
            app:tabTextAppearance="@style/Home.TabItem.TextAppearance.Style"
            app:tabTextColor="@color/gray_700">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/github_detail_follower" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/github_detail_repository" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/github_detail_following" />
        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/github_detail"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tab" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>